--- a/bioinfo_biobureau/templates/base.html
+++ b/bioinfo_biobureau/templates/base.html
@@ -32,7 +32,7 @@
     <div class="m-b">
       <nav class="navbar navbar-dark navbar-static-top bg-inverse">
         <div class="container">
-          <a class="navbar-brand" href="/">bioinfo_biobureau</a>
+          <a class="navbar-brand" href="/">Bioinfo</a>
           <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
             &#9776;
           </button>
@@ -42,6 +42,9 @@
             <ul class="nav navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'project-list' %}">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
