uploading multiple files

--- a/bioinfo_biobureau/templates/base.html
+++ b/bioinfo_biobureau/templates/base.html
@@ -82,7 +82,7 @@
       {% endif %}
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
+        <p>Welcome to BioBureau Bioinformatics Platform</p>
       {% endblock content %}
 
     </div> <!-- /container -->
