--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -11,7 +11,7 @@
     </tr>
     </table>
     <h3>Alignments</h3>
-    <a href="{% url 'project-upload' project.id %}">Upload Alignments</a>
+    <a href="{% url 'project-upload' project.id %}" class="btn btn-primary" role="button">Upload Alignments</a>
     <table class="table">
         <tr>
 
@@ -20,7 +20,7 @@
         </tr>
         {% for alignment_file in alignment_files %}
         <tr>
-            <td>{{ alignment_file.alnfile.name }}</td>
+            <td>{{ alignment_file.name }}</td>
             <td>
                 <a href="{#% url "project-detail" project.id %#}" class="btn btn-primary" role="button">View</a>
                 <a href="{#% url "project-update" project.id %#}" class="btn btn-primary" role="button">Edit</a>
