--- a/bioinfo_biobureau/templates/base.html
+++ b/bioinfo_biobureau/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}bioinfo_biobureau{% endblock title %}</title>
+    <title>{% block title %}Bioinfo - BioBureau{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -47,6 +47,9 @@
                 <a class="nav-link" href="{% url 'project-list' %}">Projects</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'search' %}">Search</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
             </ul>
@@ -83,6 +86,7 @@
 
       {% block content %}
         <p>Welcome to BioBureau Bioinformatics Platform</p>
+        <img src="{% static 'images/Biobureau.jpg' %}">
       {% endblock content %}
 
     </div> <!-- /container -->
