--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -16,11 +16,13 @@
         <tr>
 
             <th>Name</th>
+            <th>Status</th>
             <th>Options</th>
         </tr>
         {% for alignment_file in alignment_files %}
         <tr>
             <td>{{ alignment_file.name }}</td>
+            <td>{{ alignment_file.status }}</td>
             <td>
                 <a href="{#% url "project-detail" project.id %#}" class="btn btn-primary" role="button">View</a>
                 <a href="{#% url "project-update" project.id %#}" class="btn btn-primary" role="button">Edit</a>
