before testing aws integration

--- a/bioinfo_biobureau/templates/base.html
+++ b/bioinfo_biobureau/templates/base.html
@@ -47,6 +47,12 @@
                 <a class="nav-link" href="{% url 'project-list' %}">Projects</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'analysis-list' %}">Analyses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'task-list' %}">Tasks</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'search' %}">Search</a>
               </li>
               <li class="nav-item">
