--- a/analyses/templates/analyses/analysis_list.html
+++ b/analyses/templates/analyses/analysis_list.html
@@ -2,19 +2,21 @@
 
 {% block content %}
     <h2>Analyses</h2>
-    <a href="{#% url 'analyses-add' %#}" class="btn btn-primary" role="button">New Analyses</a>
+    
     <table class="table">
         <tr>
             <th>Name</th>
+            <th>Analysis Type</th>            
             <th>Options</th>
         </tr>
-        {% for project in object_list %}
+        {% for analysis in analyses %}
         <tr>
-            <td>{{ project.name }}</td>
+            <td>{{ analysis.name }}</td>
+            <td>{{ analysis.analysis_type }}</td>
             <td>
-                <a href="{% url "project-detail" project.id %}" class="btn btn-primary" role="button">View</a>
-                <a href="{% url "project-update" project.id %}" class="btn btn-primary" role="button">Edit</a>
-                <a href="{% url "project-delete" project.id %}" class="btn btn-primary" role="button">Delete</a>
+                <a href="{#% url "project-detail" project.id %#}" class="btn btn-primary" role="button">View</a>
+                <a href="{#% url "project-update" project.id %#}" class="btn btn-primary" role="button">Edit</a>
+                <a href="{#% url "project-delete" project.id %#}" class="btn btn-primary" role="button">Delete</a>
             </td>
         </tr>
         {% endfor %}
