--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -3,15 +3,49 @@
 {% block content %}
 
     <h2>Project {{project.name}}</h2>
+    
+    <div class="row-fluid">
+      <div class="span6 pull-right" style="text-align:right;margin-right:50px;">
+           <a href="{% url 'project-import' project.id  %}" class="btn btn-primary">Import FASTQ from S3</a>
+
+           <a href="{% url 'analysis-add' project.id  %}" class="btn btn-primary">New Analysis</a>
+           
+      </div>
+    </div>
+    <br>
+
+
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" href="#main" role="tab" data-toggle="tab">Main</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#buzz" role="tab" data-toggle="tab">Files</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#references" role="tab" data-toggle="tab">Tasks</a>
+  </li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane fade in active" id="main">
     <table class="table">
     <tr>
-    	<td>Name</td><td>{{project.name}}</td>
-	</tr>
-	<tr>
-    	<td>Description</td><td>{{project.description}}</td>
+        <td>Name</td><td>{{project.name}}</td>
+    </tr>
+    <tr>
+        <td>Description</td><td>{{project.description}}</td>
     </tr>
     </table>
-    <h3>Alignments</h3>
+  </div>
+  <div role="tabpanel" class="tab-pane fade" id="buzz">Files</div>
+  <div role="tabpanel" class="tab-pane fade" id="references">Tasks</div>
+</div>
+
+    
+
+    <!-- <h3>Alignments</h3>
     
 
     <form action="{% url 'project-action' %}" method="POST" id="alignments_form">
@@ -51,7 +85,7 @@
     </table>
 
     </form>
-
+ -->
 
 
 {% endblock %}
