--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     <h2>Add Project</h2>
     <form method="post">{% csrf_token %}
-	    {{ form.as_p }}
+	    {{ form|crispy}}
 	    <input type="submit" value="Submit" />
 	</form>
 {% endblock %}
