--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -6,7 +6,6 @@
     <h2>Add Project</h2>
     <form method="post">{% csrf_token %}
 	    {{ form|crispy}}
-	    <input type="submit" value="Submit" />
+	    <input type="submit" value="Submit" class="btn btn-primary" />
 	</form>
 {% endblock %}
-
