--- a/bioinfo_biobureau/templates/base.html
+++ b/bioinfo_biobureau/templates/base.html
@@ -43,6 +43,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'project-list' %}">Projects</a>
               </li>
@@ -50,14 +51,12 @@
                 <a class="nav-link" href="{% url 'analysis-list' %}">Analyses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'task-list' %}">Tasks</a>
+                <a class="nav-link" href="{#% url 'task-list' %#}">Tasks</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'search' %}">Search</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-              </li>
+              {% endif %}
             </ul>
 
             <ul class="nav navbar-nav pull-xs-right">
