--- a/projects/templates/projects/file_import.html
+++ b/projects/templates/projects/file_import.html
@@ -16,7 +16,7 @@
     
     </p>
 
-    <input type="submit" value="Upload" />
+    <input type="submit" value="Add" />
     </form>
 
 {% endblock %}
