--- a/projects/templates/projects/project_files.html
+++ b/projects/templates/projects/project_files.html
@@ -1,12 +1,11 @@
 <br>
-<h2>Instances</h2>
+<h2>Files</h2>
 
-<form action="{% url 'instance-action' project.id %}" method="POST" id="instance_form">
+<form action="{% url 'instance-action' project.id %}" method="POST" id="file_form">
 {% csrf_token %}
 <input type="hidden" name="action" value="">
     <div class="row-fluid">
       <div class="span6 pull-right" style="text-align:right;margin-right:50px;">
-           <a href="#" class="btn btn-primary" role="button" onClick='submit_instance_form("start")'>Start</a>
            <a href="#" class="btn btn-primary" role="button" onClick='submit_instance_form("stop")'>Stop</a>
            <a href="#" class="btn btn-primary" role="button" onClick='submit_instance_form("terminate")'>Terminate</a>
            <a href="#" class="btn btn-primary" role="button" onClick='submit_instance_form("delete")'>Delete</a>
@@ -15,25 +14,25 @@
     <br>
     <table class="table">
         <tr>
-            <th>#<input type="checkbox" id="instance_select_all"></th>
-            <th>Instance ID</th>
-            <th>IP</th>
+            <th>#<input type="checkbox" id="select_all"></th>
+            <th>ID</th>
+            <th>Name</th>
             <th>Status</th>
             <th>Created</th>
             <th>Started</th>
             <th>Finished</th>
             <th>Time Taken</th>
         </tr>
-        {% for instance in instances %}  
+        {% for file in files %}  
         <tr>
-            <td><input type="checkbox" name="instances" value="{{ instance.id }}"></td>
-            <td>{{instance.instance_id}}</td>
-            <td>{{instance.ip_address}}</td>
-            <td>{{instance.status}}</td>
-            <td>{{instance.created_date}}</td>
-            <td>{{instance.started}}</td>
-            <td>{{instance.finished}}</td>
-            <td>{{instance.time_taken}}</td>
+            <td><input type="checkbox" name="files" value="{{ file.id }}"></td>
+            <td>{{file.id}}</td>
+            <td>{{file.name}}</td>
+            <td>{{file.status}}</td>
+            <td>{{file.created_date}}</td>
+            <td>{{file.modified_date}}</td>
+            <td>{{file.finished}}</td>
+            <td>{{file.time_taken}}</td>
         </tr>
         {% endfor %}
     </table>
